/* Mecoiden tipiden vepsän nimed */

--- a/Mec.mw
+++ b/Mec.mw
@@ -4,6 +4,7 @@
 == Mecoiden tipiden vepsän nimed ==
 * ''Barbik, barbišt'' — hen lehtezmec.
 * ''Harv mec, harvišt'' — mecpind ladvištoiden ümbištundmäranke 0,2—0,3 vähemb.
+* ''Kaskez'' — nor' segoitadud mec.
 * ''Kor'b, šohro, mecakišt, org'' — paks da amuine da edahaine mec.
 * ''Lomžom'' — mec äiluguižiden lohkaidud puidenke.
 * ''Madališt, barbikoikaz mec'' — madal ladvoil mec.
