/* Vepsän muštatišed mecanke sidotud */

--- a/Mec.mw
+++ b/Mec.mw
@@ -24,6 +24,8 @@
 <blockquote>
 * ''Azj  eile  kondi,  mecha  ei  mäne.''
 * ''Gorä  ei  mecadme  kävele,  a  rahvastme.''
+* ''Händikast  kut  taht  söta,  a  üks’kaik  kor’bhe  kacub.''
+* ''Ičeiž  mad  armhembad,  ičeiž  mecad  čomembad.''
 * ''Min  edahamb  mecha,  sen  enamb  haugoid.''
 </blockquote>
 
