/* Vepsän muštatišed mecanke sidotud */

--- a/Mec.mw
+++ b/Mec.mw
@@ -20,13 +20,19 @@
 == Vepsän tärtused mecanke sidotud ==
 * ''Uhring'' — notked taho mecas.
 
-== Vepsän muštatišed mecanke sidotud ==
+== Vepsän muštatišed da ozoitesed mecanke sidotud ==
+=== Muštatišed ===
 <blockquote>
-* ''Azj  eile  kondi,  mecha  ei  mäne.''
-* ''Gorä  ei  mecadme  kävele,  a  rahvastme.''
-* ''Händikast  kut  taht  söta,  a  üks’kaik  kor’bhe  kacub.''
-* ''Ičeiž  mad  armhembad,  ičeiž  mecad  čomembad.''
-* ''Min  edahamb  mecha,  sen  enamb  haugoid.''
+* ''Azj eile kondi, mecha ei mäne.''
+* ''Gorä ei mecadme kävele, a rahvastme.''
+* ''Händikast kut taht söta, a üks’kaik kor’bhe kacub.''
+* ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
+* ''Min edahamb mecha, sen enamb haugoid.''
+</blockquote>
+
+=== Ozoitesed ===
+<blockquote>
+Mecas koume mechašt, kezal i tal’vel ühted sädod (hong, kuz’ da kadag).
 </blockquote>
 
 == Homaičendad ==
