--- a/Päč.mw
+++ b/Päč.mw
@@ -64,12 +64,14 @@ Ku pertiš om karzin, se päč om seibhiš. Läz päčid om karzinlaud (karzinla
 == Vepsän muštatišed da ozoitesed päčinke sidoiš ==
 === Muštatišed ===
 <blockquote>
-Päčid  ed  vargasta.
+Päčid ed vargasta.
 </blockquote>
 
 === Ozoitesed ===
 <blockquote>
 Čep' čep'he i lop päčhe (paličad seinäspäi päčihesai).
+
+Must härgaine om lujas joll’akaz, hot’ äjak vet anda, ka kaiken job (küuduk).
 </blockquote>
 
 == Homaičendad ==
