--- a/Saamen_keled.mw
+++ b/Saamen_keled.mw
@@ -101,7 +101,7 @@
 |}
 
 == Irdkosketused ==
-* [http://yle.fi/uutiset/sapmi Uzištod saameks].
+* [http://yle.fi/uutiset/sapmi Uzištused saameks (pohjoižsaamen kel')].
 
 {{stub}}
 
