--- a/Kuldaine_ak.mw
+++ b/Kuldaine_ak.mw
@@ -1,5 +1,5 @@
 [[Fail:Herberstein-Moscovia-NE.png|thumb|right|275px|''Slata baba'' [[Gerberštein, Sigizmund fon|Gerberšteinan]] Moskovijan kartal (1549 voz')]]
-'''Kuldaine ak''' ([[Komin kel'|komi]] ''Зарни ань'', [[Permin komin kel'|permin komi]] ''Зарни инь'', [[Hantan kel'|hant.]] ''Сорни най'', [[Venäkel'|ven.]] ''Золотая баба'') om legendarine [[idol]] vai (toižen versijan mödhe) amuine [[komin mifologii|komin jumal]], kudamban statujan komilaižed-paganičid vediba [[Ob'|Obile]].
+'''Kuldaine ak''' ([[Komin kel'|komi]] ''Зарни ань'', [[Permin komin kel'|permin komi]] ''Зарни инь'', [[Hantan kel'|hant.]] ''Сорни най'', [[Venäkel'|ven.]] ''Золотая баба'') om legendarine [[idol]] vai (toižen versijan mödhe) amuine [[komin mifologii|komin jumal]], kudamban statujan komilaižed-paganičad vediba [[Ob'|Obile]].
 
 {{stub}}
 
