*Empty MediaWiki Message*

--- a/Lumbricillus_rubidus.mw
+++ b/Lumbricillus_rubidus.mw
@@ -1,4 +1,4 @@
-'''''Lumbricillus rubidus''''' om meri[[rengazmadod|rengazmadoiden]] erik ''[[Enchytraeidae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 1978 entomologad Finogenova da Strel'cov.
+'''''Lumbricillus rubidus''''' om meri[[rengazmadod|rengazmadoiden]] erik ''[[Enchytraeidae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 1978 zoologad Finogenova da Strel'cov.
 
 [[Ukrain]]an endemik. Ei ole völ nimid rahvahaližil kelil.
 {{stub}}
