*Empty MediaWiki Message*

--- a/Harmothoe_dictyophora.mw
+++ b/Harmothoe_dictyophora.mw
@@ -1,9 +1,7 @@
 '''''Harmothoe dictyophora''''' om meri[[rengazmadod|rengazmadoiden]] erik ''[[Polynoidae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1878 zoolog Grube.
 
-Eläb [[Rusked meri|Rustten meren]] i [[Persijan laht]]an randištoiš, a mugažo se löutud [[Kitai|Kitajan]], [[Vjetnam]]an da [[Avstralii (valdkund)|Avstralijan]] randoidenno. Ei ole völ nimid rahvahaližil kelil.
+Eläb [[Rusked meri|Rustten meren]] i [[Persijan laht]]an randištoiš, a mugažo se löutud [[Kitai|Kitajan]], [[Vjetnam]]an da [[Avstralii (valdkund)|Avstralijan]] randoidenno. Madon [[kitajan kel'|kitajalaine]] nimi — ''网纹哈鳞虫'' [''vang ven ha lin čong''].
 {{stub}}
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Rengazmadod]]
-
-[[war:Harmothoe dictyophora]]
