--- a/VAZ-2101.mw
+++ b/VAZ-2101.mw
@@ -1,4 +1,4 @@
-[[Fail:LADA-2101-yellow-cropped.jpg|thumb|250px|VAZ-2101]]
+[[Fail:ВАЗ-2101.jpg|thumb|250px|VAZ-2101]]
 '''VAZ-2101 «Žiguli»''' ([[Venäkel'|venäkelel]]: ''ВАЗ-2101 «Жигули»'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|NSTÜ:n]] avto. 
 {{stub}}
 
