*Empty MediaWiki Message*

--- a/Mail'man_valdkundad.mw
+++ b/Mail'man_valdkundad.mw
@@ -185,7 +185,7 @@
 |-
 | <CENTER>'''90'''</CENTER> || <CENTER>[[Fail:Flag_of_South_Korea.svg|100px]]</CENTER> || <CENTER>[[Korejan Tazovaldkund]]</CENTER> || <CENTER>[[Seul]]</CENTER>
 |-
-| <CENTER>'''91'''</CENTER> || <CENTER>[[Fail:Flag_of_Costa_Rica.svg|100px]]</CENTER> || <CENTER>[[Kosta Rika]]</CENTER> || <CENTER>[[San Hose]]</CENTER>
+| <CENTER>'''91'''</CENTER> || <CENTER>[[Fail:Flag_of_Costa_Rica.svg|100px]]</CENTER> || <CENTER>[[Kostarik]]</CENTER> || <CENTER>[[San Hose]]</CENTER>
 |-
 | <CENTER>'''92'''</CENTER> || <CENTER>[[Fail:Flag of Cote d'Ivoire.svg|100px]]</CENTER> || <CENTER>[[Kot d'Ivuar]]</CENTER> || <CENTER>[[Jamusukro]]</CENTER>
 |-
