--- a/Frigga_pratensis.mw
+++ b/Frigga_pratensis.mw
@@ -1,4 +1,4 @@
-'''''Dasineura solonaica''''' om [[hämähoukod|hämähoukoiden]] erik ''[[Salticidae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1885 entomolog Pekham.
+'''''Dasineura solonaica''''' om [[hämähoukod|hämähoukoiden]] erik ''[[Salticidae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 1885 entomologad Elizabet Marija Gifford da Džordž Uil'jam Pekhamad.
 
 Eläb [[Keskamerik]]as: [[Gvatemal]]alpäi [[Kostarik]]hasai. Necil hämähoukol, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
