--- a/Belisana_strinatii.mw
+++ b/Belisana_strinatii.mw
@@ -1,7 +1,7 @@
 '''''Belisana strinatii''''' om [[hämähouk]], kudamban avaiži da ümbrikirjuti vl. [[2005]] arahnolog H'juber.
 
-[[Malaizii|Malaizijan]] endemik. Necil hämähoukol, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
+[[Malaizii|Malaizijan]] endemik. Necil hämähoukul, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
-[[Kategorii:Hämähoukod]]
+[[Kategorii:Hämähoukud]]
 [[Kategorii:Živatad kirjamišton mödhe]]
