*Empty MediaWiki Message*

--- a/Frigga_pratensis.mw
+++ b/Frigga_pratensis.mw
@@ -1,7 +1,7 @@
 '''''Dasineura solonaica''''' om [[hämähoukod|hämähoukoiden]] erik ''[[Salticidae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 1885 entomologad Elizabet Marija Gifford da Džordž Uil'jam Pekhamad.
 
-Eläb [[Keskamerik]]as: [[Gvatemal]]alpäi [[Kostarik]]hasai. Necil hämähoukol, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
+Eläb [[Keskamerik]]as: [[Gvatemal]]aspäi [[Kostarik]]hasai. Necil hämähoukul, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
 [[Kategorii:Živatad kirjamišton mödhe]]
-[[Kategorii:Hämähoukod]]
+[[Kategorii:Hämähoukud]]
