шок, я думала там на -o-...

--- a/Frigga_pratensis.mw
+++ b/Frigga_pratensis.mw
@@ -1,4 +1,4 @@
-'''''Dasineura solonaica''''' om [[hämähoukod|hämähoukoiden]] erik ''[[Salticidae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 1885 entomologad Elizabet Marija Gifford da Džordž Uil'jam Pekhamad.
+'''''Frigga pratensis''''' om [[hämähoukud|hämähoukuiden]] erik ''[[Salticidae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 1885 entomologad Elizabet Marija Gifford da Džordž Uil'jam Pekhamad.
 
 Eläb [[Keskamerik]]as: [[Gvatemal]]aspäi [[Kostarik]]hasai. Necil hämähoukul, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
