*Empty MediaWiki Message*

--- a/Biton_transvaalensis.mw
+++ b/Biton_transvaalensis.mw
@@ -1,7 +1,7 @@
-'''''Biton transvaalensis''''' om [[hämähouk]], kudamban avaiži da ümbrikirjuti vl. [[1949]] arahnolog Lourens. Necil hämähoukol ei ole völ nimid rahvahaližil kelil.
+'''''Biton transvaalensis''''' om [[hämähoukud|hämähouk]], kudamban avaiži da ümbrikirjuti vl. [[1949]] arahnolog Lourens. Necil hämähoukul ei ole völ nimid rahvahaližil kelil.
 
 Eläb [[Afrik]]an suves.
 {{stub}}
 
-[[Kategorii:Hämähoukod]]
+[[Kategorii:Hämähoukud]]
 [[Kategorii:Živatad kirjamišton mödhe]]
