--- a/Heteropoda_shillongensis.mw
+++ b/Heteropoda_shillongensis.mw
@@ -1,7 +1,7 @@
-'''''Heteropoda shillongensis''''' om [[hämähouk]], kudamban avaižiba da ümbrikirjutiba vl. [[1988]] arahnologad Seti da Tikader. Necil hämähoukol ei ole völ nimid rahvahaližil kelil.
+'''''Heteropoda shillongensis''''' om [[hämähoukud|hämähouk]], kudamban avaižiba da ümbrikirjutiba vl. [[1988]] arahnologad Seti da Tikader. Necil hämähoukul ei ole völ nimid rahvahaližil kelil.
 
 [[Indii|Indijan]] endemik.
 {{stub}}
 
-[[Kategorii:Hämähoukod]]
+[[Kategorii:Hämähoukud]]
 [[Kategorii:Živatad kirjamišton mödhe]]
