*Empty MediaWiki Message*

--- a/Belisana_strinatii.mw
+++ b/Belisana_strinatii.mw
@@ -1,4 +1,4 @@
-'''''Belisana strinatii''''' om [[hämähouk]], kudamban avaiži da ümbrikirjuti vl. [[2005]] arahnolog H'juber.
+'''''Belisana strinatii''''' om [[hämähoukud|hämähouk]], kudamban avaiži da ümbrikirjuti vl. [[2005]] arahnolog H'juber.
 
 [[Malaizii|Malaizijan]] endemik. Necil hämähoukul, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
