*Empty MediaWiki Message*

--- a/Blumea_arfakiana.mw
+++ b/Blumea_arfakiana.mw
@@ -1,4 +1,4 @@
-'''''Blumea arfakiana''''' om [[kazmused|kazmusiden]] erik ''[[Asteraceae]]''-sugukundas. Avaiži da ümbrikirjuti vl 1883 botanik Martelli.
+'''''Blumea arfakiana''''' om [[kazmused|kazmusiden]] erik ''[[Asteraceae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1883 botanik Martelli.
 
 Kazvab [[Papua — Uz' Gvinei|Papuas — Udes Gvinejas]] da [[Päivnouzmaine Timor|Päivnouzmaižes Timoras]]. Necil kazmusel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
