*Empty MediaWiki Message*

--- a/Gaudichaudia_hexandra.mw
+++ b/Gaudichaudia_hexandra.mw
@@ -1,4 +1,4 @@
-'''''Gaudichaudia hexandra''''' om [[kazmused|kazmusiden]] erik ''[[Malpighiaceae]]''-sugukundas. Avaiži da ümbrikirjuti vl 1917 botanik Šoda.
+'''''Gaudichaudia hexandra''''' om [[kazmused|kazmusiden]] erik ''[[Malpighiaceae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1917 botanik Šoda.
 
 [[Gvatemal]]an endemik. Necil kazmusel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
