*Empty MediaWiki Message*

--- a/Babiana_papyracea.mw
+++ b/Babiana_papyracea.mw
@@ -1,4 +1,4 @@
-'''''Babiana papyracea''''' om [[kazmused|kazmusiden]] erik ''[[Iridaceae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl 2007 botanikad Goldblatt da Menning.
+'''''Babiana papyracea''''' om [[kazmused|kazmusiden]] erik ''[[Iridaceae]]''-sugukundas. Avaižiba da ümbrikirjutiba vl. 2007 botanikad Goldblatt da Menning.
 
 [[Suviafrik]]an endemik. Necil kazmusel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
