*Empty MediaWiki Message*

--- a/Asymbolus_galacticus.mw
+++ b/Asymbolus_galacticus.mw
@@ -5,3 +5,4 @@ Eläb [[Avstralii (kontinent)|Avstralijan]] randoidenno.
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Kalad]]
+[[Kategorii:Živatad vepsän nimeta]]
