*Empty MediaWiki Message*

--- a/Bebelis_lignea.mw
+++ b/Bebelis_lignea.mw
@@ -5,3 +5,4 @@ Eläb [[Beliz]]as, [[Nikaragua (valdkund)|Nikaraguas]] da [[Panam]]as. Necil gav
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
