губок как биологический тип предлагаю записывать как gupkad

--- a/Dendrilla_elegans.mw
+++ b/Dendrilla_elegans.mw
@@ -1,7 +1,8 @@
-'''''Dendrilla elegans''''' om [[gubkad|gupkoiden]] erik ''[[Dendrilla]]''-heimos. Avaiži da ümbrikirjuti vl. 1888 biolog Lendenfel'd.
+'''''Dendrilla elegans''''' om [[gupkad|gupkoiden]] erik ''[[Dendrilla]]''-heimos. Avaiži da ümbrikirjuti vl. 1888 biolog Lendenfel'd.
 
 Eläb [[Avstralii|Avstralijan]] randoidenno. Ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
 [[Kategorii:Živatad kirjamišton mödhe]]
-[[Kategorii:Gubkad]]
+[[Kategorii:Gupkad]]
+[[Kategorii:Živatad vepsän nimeta]]
