*Empty MediaWiki Message*

--- a/Frigga_pratensis.mw
+++ b/Frigga_pratensis.mw
@@ -5,3 +5,4 @@ Eläb [[Keskamerik]]as: [[Gvatemal]]aspäi [[Kostarik]]hasai. Necil hämähoukul
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Hämähoukud]]
+[[Kategorii:Živatad vepsän nimeta]]
