*Empty MediaWiki Message*

--- a/Trochalopteron_lineatum.mw
+++ b/Trochalopteron_lineatum.mw
@@ -6,3 +6,4 @@ Eläb [[Keskazii|Kesk-]] i [[Suviazii|Suviazijas]]: [[Afganistan]]as, [[Butan (v
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad vepsän nimeta]]
