*Empty MediaWiki Message*

--- a/Mompha_edax.mw
+++ b/Mompha_edax.mw
@@ -5,3 +5,4 @@ Eläb päivnouzmaižes [[Evrop]]as. Necil lipkaižel, ezimeletaden, ei ole völ 
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
