*Empty MediaWiki Message*

--- a/Labidostomis_martensi.mw
+++ b/Labidostomis_martensi.mw
@@ -5,3 +5,4 @@ Necil gavedil ei ole völ nimid rahvahaližil kelil.
 
 [[Kategorii:Gavedid]]
 [[Kategorii:Živatad kirjamišton mödhe]]
+[[Kategorii:Živatad vepsän nimeta]]
