*Empty MediaWiki Message*

--- a/Platyptilia_morophaea.mw
+++ b/Platyptilia_morophaea.mw
@@ -5,3 +5,4 @@ Eläb tropižes [[Afrik]]as ([[Efiopii]], [[Kenii]]). Necil lipkaižel, ezimelet
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
