--- a/Psammotettix_excisus.mw
+++ b/Psammotettix_excisus.mw
@@ -5,3 +5,4 @@ Eläb [[Ročinma]]s da [[Suomenma]]s; jal'gmäižes se om [[kadojad erikad|kadom
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
