*Empty MediaWiki Message*

--- a/Pterocheilus_merpeba.mw
+++ b/Pterocheilus_merpeba.mw
@@ -5,3 +5,4 @@ Necil gavedil, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
