*Empty MediaWiki Message*

--- a/Ptychogena_antarctica.mw
+++ b/Ptychogena_antarctica.mw
@@ -5,3 +5,4 @@ Eläb [[Antarktid]]an randoidenno. Ei ole völ nimid rahvahaližil kelil.
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Meduzad]]
+[[Kategorii:Živatad vepsän nimeta]]
