*Empty MediaWiki Message*

--- a/Siccia_stictica.mw
+++ b/Siccia_stictica.mw
@@ -5,3 +5,4 @@ Eläb tropižes [[Afrik]]as ([[Gan]]aspäi [[Zimbabve]]hesai). Necil lipkaižel,
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
