--- a/Tetragnatha_conica.mw
+++ b/Tetragnatha_conica.mw
@@ -8,3 +8,4 @@ Necen gavedin avaiži da ümbrikirjuti vl. 1861 entomolog Grube.<ref>http://rese
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
