--- a/Theope_sticheli.mw
+++ b/Theope_sticheli.mw
@@ -8,3 +8,4 @@ Necen gavedin avaiži da ümbrikirjuti vl. 1998 entomolog Dž. Holl.<ref>http://
 
 [[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad vepsän nimeta]]
