*Empty MediaWiki Message*

--- a/Blumea_arfakiana.mw
+++ b/Blumea_arfakiana.mw
@@ -4,3 +4,4 @@ Kazvab [[Papua — Uz' Gvinei|Papuas — Udes Gvinejas]] da [[Päivnouzmaine Tim
 {{stub}}
 
 [[Kategorii:Kazmused kirjamišton mödhe]]
+[[Kategorii:Kazmused vepsän nimeta]]
