*Empty MediaWiki Message*

--- a/Colchicum_autumnale.mw
+++ b/Colchicum_autumnale.mw
@@ -5,3 +5,4 @@ Kazvab läz kaiked [[Evrop]]adme, [[Skandinavii]] da pohjoine [[Venäma]] heitte
 {{stub}}
 
 [[Kategorii:Kazmused kirjamišton mödhe]]
+[[Kategorii:Kazmused vepsän nimeta]]
