*Empty MediaWiki Message*

--- a/Pterolepis_glomerata.mw
+++ b/Pterolepis_glomerata.mw
@@ -5,3 +5,4 @@ Kazvab [[Suviamerik]]as i [[Pened Antil'jan Sared|Peniš Antil'jan Sariš]], nep
 {{stub}}
 
 [[Kategorii:Kazmused kirjamišton mödhe]]
+[[Kategorii:Kazmused vepsän nimeta]]
