*Empty MediaWiki Message*

--- a/Klauvulin.mw
+++ b/Klauvulin.mw
@@ -1,5 +1,5 @@
 [[Fail:ClavulinaCristata 01.jpg|thumb|right|250px|''[[Clavulina cristata]]'' — tipine heimon erik]]
-'''Klauvulin''' ([[latinan kel'|lat.]]: ''Clavulina'') om [[sened|seniden]] heim ''[[Clavulinaceae]]''-sugukundaspäi.
+'''Klauvulin''' ([[latinan kel'|lat.]]: ''Clavulina'') om [[sened i babukad|seniden]] heim ''[[Clavulinaceae]]''-sugukundaspäi.
 
 Se avaiži da ümbrikirjuti vl. 1888 mikolog [[Šröter Jozef|Jozef Šröter]].
 {{stub}}
