*Empty MediaWiki Message*

--- a/Hydnellum_peckii.mw
+++ b/Hydnellum_peckii.mw
@@ -6,3 +6,4 @@ Senen suruz om pen'. Se kazvab vaiše [[sügüz'|sügüzel]] [[kavag'mec|kavag'm
 
 [[Kategorii:Sened kirjamišton mödhe]]
 [[Kategorii:Koiransened]]
+[[Kategorii:Sened vepsän nimeta]]
