--- a/Kitoiden_allei.mw
+++ b/Kitoiden_allei.mw
@@ -1,5 +1,5 @@
 [[Fail:Whale Ribs, Yttygran Island.jpg|thumb|right|275px|Kitoiden allei]]
-'''Kitoiden allei''' ([[Venäkel'|ven.]] ''Китовая аллея'') om amuine [[eskimosad|eskimosoiden]] pätaho [[Itigran]]-sarel ([[Čukotk]]). Arheologine kompleks nägub kuti kaks' rived [[grenlandijalaine kit|grenlandijaižiden kitoiden]] sur'kuluiš luišpäi, kudambad oma kaidud maha. Kompleks om avaitud vl [[1976]] tedoidajiden gruppal NSTÜ:an TA etnografijan institutaspäi [[Členov Mihail|M.A. Členovan]] ohjandusen al.
+'''Kitoiden allei''' ([[Venäkel'|ven.]] ''Китовая аллея'') om amuine [[eskimosad|eskimosoiden]] pühätaho [[Itigran]]-sarel ([[Čukotk]]). Arheologine kompleks nägub kuti kaks' rived [[grenlandijalaine kit|grenlandijaižiden kitoiden]] sur'kuluiš luišpäi, kudambad oma kaidud maha. Kompleks om avaitud vl [[1976]] tedoidajiden gruppal NSTÜ:an TA etnografijan institutaspäi [[Členov Mihail|M.A. Členovan]] ohjandusen al.
 
 {{stub}}
 
