--- a/Optimal.mw
+++ b/Optimal.mw
@@ -26,7 +26,7 @@ Mülükundas oliba Sabina Lürenbaum ([[saksan kel'|saks.]]: ''Sabine Lürenbaum
 * ''The Good Bye (feat. Silke)'' (1984)
 
 == Irdkosketused ==
-* [http://www.cccatch.ru/photogallery/optimal/ fotogalerei]
+* [http://optimal.oyla14.de/ Oficialine sait]
 {{stub}}
 {{C. C. Catch}}
 
