--- a/Politeizm.mw
+++ b/Politeizm.mw
@@ -1,5 +1,5 @@
 {{1000}}
-'''Politeizm''' ([[Grekan kel'|grek.]] ''μονος'' — üks', θεος — jumal) om uskondoiden sistem, [[religii|religine]] mail'mannägend, kudamban aluses om usk äjihe [[jumal]]oihe. Hö oma tobjimalaz keratud [[panteon]]ha jumaloišpäi i jumalnaižišpäi.
+'''Politeizm''' ([[Grekan kel'|grek.]] ''πολύς'' — äi, θεος — jumal) om uskondoiden sistem, [[religii|religine]] mail'mannägend, kudamban aluses om usk äjihe [[jumal]]oihe. Hö oma tobjimalaz keratud [[panteon]]ha jumaloišpäi i jumalnaižišpäi.
 
 {{stub}}
 
