*Empty MediaWiki Message*

--- a/Monoteizm.mw
+++ b/Monoteizm.mw
@@ -1,5 +1,5 @@
 {{1000}}
-'''Monoteizm''' ([[Grekan kel'|grek.]] ''πολύς'' — äi, θεος — jumal) om [[religii|religine]] el'genduz, miše om vaiše üks' [[jumal]], vai miše Jumal om  üks'jäine.
+'''Monoteizm''' ([[Grekan kel'|grek.]] ''μονος'' — üks', θεος — jumal) om [[religii|religine]] el'genduz, miše om vaiše üks' [[jumal]], vai miše Jumal om  üks'jäine.
 
 {{stub}}
 
