fixing dead links

--- a/Reboinnena.mw
+++ b/Reboinnena.mw
@@ -5,7 +5,7 @@ Eläjiden lugu om 4759 ristituid.
 
 == Irdkosketused ==
 * [http://moposlisnos.ru/ Oficialine sait]
-* [http://lisiynos.by.ru/ Sait Reboinnenan (Lisii Nosan) polhe]
+* [http://web.archive.org/20040831112622/lisiynos.by.ru/ Sait Reboinnenan (Lisii Nosan) polhe]
 
 [[Kategorii:Piter]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
