--- a/Secret_Star.mw
+++ b/Secret_Star.mw
@@ -1,4 +1,4 @@
-'''Secret Star''', tetab mugažo kut '''Salu''' (todesine nimi — '''Sabina Lürenbaum''' ([[saksan kel'|saks.]]: ''Sabine Lürenbaum''), sünd. [[1965]]?) om saksalaine [[evrodisko]]pajatai hätkelitomanke karjeranke.
+'''Secret Star''', tetab mugažo kut '''Salu''' (todesine nimi — '''Sabina Lürenbaum''' ([[saksan kel'|saks.]]: ''Sabine Lürenbaum''), sünd. [[1965]], [[Osnabrük]], [[Saksanma]]) om saksalaine [[evrodisko]]pajatai hätkelitomanke karjeranke.
 
 Ezini «[[Optimal]]»-gruppas (vlspäi 1983 vhesai 1985) kut päsolist ([[C. C. Catch]]:anke). Jäl'ges gruppan čihodamižes hän ezipakiči kontraktan [[Bolen Diter|Diteranke Bolenanke]], no heiden partnörižed kesksidod ei vastnugoi.
 
