*Empty MediaWiki Message*

--- a/Gruzii.mw
+++ b/Gruzii.mw
@@ -1,35 +1,28 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''საქართველო'''<br />'''Gruzii'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag of Georgia.svg|150px|border]]
-| align="center" width="140px" | [[Fail:Greater coat of arms of Georgia.svg|150px]]
-|-
-| align="center" width="140px" | 
-| align="center" width="140px" | 
-|}
-|-
-| align=center colspan=2 | [[Fail:Georgia (orthographic projection with inset).svg|300px]]<!--pls don't change the current Gruzian [a.k.a. Georgian] map: your edits will be undid in any case. thx in advance-->
-|}
-'''Gruzii''' (gruz.: საქართველო) om valdkund [[Evropa]]s. Sen pälidn om [[Tbilisi]].
+{{Valdkund
+| Nimi = Gruzii<br />საქართველო
+| Valdkundznam = Greater coat of arms of Georgia.svg
+| Flag = Flag of Georgia.svg
+| Valdkundznam text = Gruzijan valdkundznam
+| Flag text = Gruzijan flag
+| Pälidn = Tbilis
+| Eläjiden lugu = 4.596.600
+| Voz' = 2013
+| Pind = 69.700
+| Kart = Georgia in its region (de-facto).svg
+| Kel' = [[gruzijan kel'|gruzijan]]
+| Valdkundan pämez' = [[Margvelašvili Georgii|Georgii Margvelašvili]]
+| Päministr = [[Ivanišvili Bidzina|Bidzina Ivanišvili]]
+| Religii = [[hristanuskond]], [[islam]]
+| Valüt = [[lari]]
+| Internet-domen = [[.ge]]
+| Telefonkod = +995
+| Aigvö = [[UTC]]+4
+}}
+'''Gruzii''' ([[gruzijan kel'|gruz.]]: ''საქართველო'') om valdkund [[Azii|Azijas]]. Pälidn om [[Tbilis]].
 
-Eläjiden lugu — 4,4 mln.</br>
-Pind — 69 700 km<sup>2</sup>.
+Eläjiden lugu om 4,596,600 ristitud (2013). Pind om 69,700 km².
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
-{{Evropa}}
-
+Gruzijan prezident om [[Margvelašvili Georgii|Georgii Margvelašvili]], a päministr om [[Ivanišvili Bidzina|Bidzina Ivanišvili]].
 {{stub}}
 
-[[Kategorii:Gruzii| ]]
+[[Kategorii:Gruzii|*]]
