*Empty MediaWiki Message*

--- a/Tbilis.mw
+++ b/Tbilis.mw
@@ -1,6 +1,6 @@
 {| class="infobox bordered" align=right cellpadding=4 cellspacing=0 width=275 style="clear:right; margin: 0 0 1em 1em; background: #f9f9f9;  font-size: 95%;"
 |-
-|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Tbilisi'''</big>
+|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Tbilis'''</big>
 |-
 | align="center" | [[Fail:Tbilisi_City_Seal.svg|100px|Tbilisin lidnanznam]]
 | align="center" | [[Fail:Flag_of_Tbilisi.svg|125px|Tbilisin flag]]
@@ -10,7 +10,8 @@
 |Pind|| 726 km²
 |}
 [[Fail:Hpim3433.jpg|thumb|right|250px|Tbilisi]]
-'''Tbilisi''' om [[Gruzii|Gruzijan]] pälidn.
+'''Tbilis''' om [[Gruzii|Gruzijan]] pälidn.
+{{stub}}
 
 [[Kategorii:Gruzijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
