*Empty MediaWiki Message*

--- a/Tbilis.mw
+++ b/Tbilis.mw
@@ -9,7 +9,7 @@
 |-
 |Pind|| 726 km²
 |}
-[[Fail:Hpim3433.jpg|thumb|right|250px|Tbilisi]]
+[[Fail:Hpim3433.jpg|thumb|right|250px|Tbilis]]
 '''Tbilis''' om [[Gruzii|Gruzijan]] pälidn.
 {{stub}}
 
