*Empty MediaWiki Message*

--- a/Boa.mw
+++ b/Boa.mw
@@ -1,4 +1,4 @@
-[[Fail:Theresia Elssler, Lithographie von F Lentzen.jpg|thumb|right|215px|[[Avstrii|Avstrijalaine]] kargnik [[El'ssler Tereza|Tereza El'ssler]] nahkboa päl]]
+[[Fail:Theresia Elssler, Lithographie von F Lentzen.jpg|thumb|right|215px|[[Avstrii|Avstrijalaine]] kargnik [[El'ssler Tereza|Tereza El'ssler]] karvboa päl]]
 '''Boa''' om pit'k kaid [[kaglpaik]] [[karv]]aspäi vai [[höuneh|höunhišpäi]].
 
 {{stub}}
