--- a/Slavižed_keled.mw
+++ b/Slavižed_keled.mw
@@ -1,5 +1,5 @@
 '''Slavižed keled''' pidadas [[indo-evropalaižed keled|indo-evropalašt]] kel'kanzad, [[baltiž-slavižed keled|baltiž-slavišt]] alakel'kanzad. Pagižijoiden lugu om läz 400 millionad ristitud kut mamankelil; nece om kaikiš suremb kelengrupp [[Evrop]]as da üks' kaikiš surembišpäi mail'mas. 
-
+[[File:Linguas slave Interlingua.png|thumb|500px|right|Slavižed keled]]
 Om 3 (vai 4) slavižiden keliden vezad:
 # [[Päivnouzmslavižed keled]] (kaikiš suremb)
 # [[Päivlaskmslavižed keled]]
