наверное есть, просто мне неизвестно...

--- a/Senna_socotrana.mw
+++ b/Senna_socotrana.mw
@@ -1,6 +1,6 @@
 '''''Senna socotrana''''' om [[bobanvuiččed|bobanvuiččiden kazmusiden]] erik ''[[Fabaceae]]''-sugukundas.
 
-[[Jemen]]an endemik; kazvab [[Sokotr]]-sares.
+[[Jemen]]an endemik; kazvab [[Sokotr]]-sares. Necil kazmusel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
 [[Kategorii:Kazmused kirjamišton mödhe]]
