*Empty MediaWiki Message*

--- a/Queen.mw
+++ b/Queen.mw
@@ -4,7 +4,7 @@
  | Foto = Queen 1984 011.jpg
  | Žanrad = [[Rock]],[[Hard Rock]]
  | Voded = 1970 - ...
- | Valdkund = AÜV
+ | Valdkund = [[Sur' Britanii |SB]]
  | Lidn = Los Andželes
  | Kel' = [[anglijan kel'|anglijan]]
  | Leiblad = 
