*Empty MediaWiki Message*

--- a/Queen.mw
+++ b/Queen.mw
@@ -4,8 +4,8 @@
  | Foto = Queen 1984 011.jpg
  | Žanrad = [[Rock]],[[Hard Rock]]
  | Voded = 1970 - ...
- | Valdkund = Sur' Britanii| SB
- | Lidn = Los Andželes
+ | Valdkund = Sur' Britanii
+ | Lidn = London
  | Kel' = [[anglijan kel'|anglijan]]
  | Leiblad = 
  | Toižed projektad = 
