*Empty MediaWiki Message*

--- a/Queen.mw
+++ b/Queen.mw
@@ -2,27 +2,26 @@
  | Nimi = Queen
  | Logo = Queen logo.svg
  | Foto = Queen 1984 011.jpg
- | Žanrad = [[Rock]],[[Hard Rock]]
- | Voded = 1970 - ...
+ | Žanrad = [[glemrok]], [[hardrok]]
+ | Voded = 1970—...
  | Valdkund = Sur' Britanii
  | Lidn = London
  | Kel' = [[anglijan kel'|anglijan]]
- | Leiblad = 
- | Toižed projektad = 
- | Mülükund = Freddie Mercury,John Deacon,Brian May,Roger Taylor
- | Eksühtnijad = 
+ | Leiblad = [[Capitol]], [[EMI]]
+ | Toižed projektad = [[Smile]], [[The Cross]]
+ | Mülükund = [[Mei Brajan|Brajan Mei]], [[Teilor Rodžer|Rodžer Teilor]]
+ | Eksühtnijad = [[Freddi Merkjuri]], [[Dikon Džon|Džon Dikon]], Maik Grouz, Barri Mitčel, Dag Bogi
  | Sait = http://www.queenonline.com/
 }}
-
-'''«Queen»''' oli [[Sur' Britanii|britanijalaine]] muzikgrupp, kudamb edestab muzikad Rock da Hard Rock-stiliš.
+'''«Queen»''' oli legendine [[Sur' Britanii|britanijalaine]] muzikgrupp, kudamb edestab muzikad [[glemrok|glem-]] da [[hardrok]]-stiliš.
 
 Gruppan aluz om pandud vl 1970.
 
 == Mülükund ==
-*Freddie Merucry (1946-1991)
-*John Deacon (1951-)
-*Brian May (1947-)
-*Roger Taylor (1949-)
+Nügüdläine mülükund:
+* [[Mei Brajan|Brajan Mei]] (1970—)
+* [[Teilor Rodžer|Rodžer Teilor]] (1970—)
+Klassižes mülükundas [[Freddi Merkjuri]] oli kaikiš tetabamb muzikantoišpäi: hän ezini vlpäi 1970 vhesai 1991; tähäsai-ki hän om üks' kaikiš znamasižišpäi muzikantoišpäi mail'mas. 
 
 ==Diskografii==
 *Queen (1973)
