*Empty MediaWiki Message*

--- a/Queen.mw
+++ b/Queen.mw
@@ -10,7 +10,7 @@
  | Leiblad = [[Capitol]], [[EMI]]
  | Toižed projektad = [[Smile]], [[The Cross]]
  | Mülükund = [[Mei Brajan|Brajan Mei]], [[Teilor Rodžer|Rodžer Teilor]]
- | Eksühtnijad = [[Freddi Merkjuri]], [[Dikon Džon|Džon Dikon]], Maik Grouz, Barri Mitčel, Dag Bogi
+ | Eksühtnijad = [[Freddi Merkjuri]], [[Dikon Džon|Džon Dikon]], Maik Grouz, Barri Mitčel, Dag Ivud Bogi
  | Sait = http://www.queenonline.com/
 }}
 '''«Queen»''' oli legendine [[Sur' Britanii|britanijalaine]] muzikgrupp, kudamb edestab muzikad [[glemrok|glem-]] da [[hardrok]]-stiliš.
@@ -23,19 +23,29 @@ Nügüdläine mülükund:
 * [[Teilor Rodžer|Rodžer Teilor]] (1970—)
 Klassižes mülükundas oliba [[Freddi Merkjuri]] da [[Dikon Džon|Džon Dikon]] mugažo; Merkjuri oli kaikiš tetabamb heišpäi. Hän ezini vlpäi 1970 vhesai 1991 (hänen surman voz' [[SIDS]]:aspäi); tähäsai-ki hän om üks' kaikiš znamasižišpäi muzikantoišpäi mail'mas.
 
-==Diskografii==
-*Queen (1973)
-*Queen II (1974)
-*Sheer Heart Attack (1974)
-*A Night at the Opera (1975)
-*A Day at the Races (1976)
-*News of the World (1977)
-*Jazz (1978)
-*The Game (1980)
-*Flash Gordon (1980)
-*Hot Space (1982)
-*The Works (1984)
-*A Kind of Magic (1986)
-*The Miracle (1989)
-*Innuendo (1991)
-*Made in Heaven (1995)
+Aigaližes gruppmülükundas eziniba (jonon mödhe) Maik Grouz, Barri Mitčel, Dag Ivud Bogi (kaik — [[basgitar]]istad), no hö oliba lühüdašti Queen:as.
+
+== Al'bomad ==
+* ''[[Queen]]'' (1973)
+* ''[[Queen II]]'' (1974)
+* ''[[Sheer Heart Attack]]'' (1974)
+* ''[[A Night at the Opera]]'' (1975)
+* ''[[A Day at the Races]]'' (1976)
+* ''[[News of the World]]'' (1977)
+* ''[[Jazz]]'' (1978)
+* ''[[The Game]]'' (1980)
+* ''[[Flash Gordon]]'' (1980)
+* ''[[Hot Space]]'' (1982)
+* ''[[The Works]]'' (1984)
+* ''[[A Kind of Magic]]'' (1986)
+* ''[[The Miracle]]'' (1989)
+* ''[[Innuendo]]'' (1991)
+* ''[[Made in Heaven]]'' (1995)
+
+== Irdkosketused ==
+* [http://www.queenonline.com/ Oficialine sait]
+
+[[Kategorii:Suren Britanijan muzikgruppad]]
+[[Kategorii:Muzikgruppad kirjamišton mödhe]]
+[[Kategorii:Glemrokgruppad]]
+[[Kategorii:Hardrokgruppad]]
