--- a/Queen.mw
+++ b/Queen.mw
@@ -26,7 +26,7 @@ Klassižes mülükundas oliba [[Freddi Merkjuri]] da [[Dikon Džon|Džon Dikon]]
 Aigaližes gruppmülükundas eziniba (jonon mödhe) Maik Grouz, Barri Mitčel, Dag Ivud Bogi (kaik — [[basgitar]]istad), no hö oliba lühüdašti Queen:as.
 
 == Al'bomad ==
-* ''[[Queen]]'' (1973)
+* ''[[Queen (al'bom)|Queen]]'' (1973)
 * ''[[Queen II]]'' (1974)
 * ''[[Sheer Heart Attack]]'' (1974)
 * ''[[A Night at the Opera]]'' (1975)
