*Empty MediaWiki Message*

--- a/Queen.mw
+++ b/Queen.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = [[Freddi Merkjuri]], [[Dikon Džon|Džon Dikon]], Maik Grouz, Barri Mitčel, Dag Ivud Bogi
  | Sait = http://www.queenonline.com/
 }}
-'''«Queen»''' oli legendine [[Sur' Britanii|britanijalaine]] muzikgrupp, kudamb edestab muzikad [[glemrok|glem-]] da [[hardrok]]-stiliš.
+'''«Queen»''' oli legendine [[Sur' Britanii|britanijalaine]] ([[Anglii|anglijalaine]]) muzikgrupp, kudamb edestab muzikad [[glemrok|glem-]] da [[hardrok]]-stiliš.
 
 Gruppan aluz om pandud vl 1970.
 
