*Empty MediaWiki Message*

--- a/Letojanni_(stancii).mw
+++ b/Letojanni_(stancii).mw
@@ -4,5 +4,5 @@
 Om kaks' platformad.
 {{stub}}
 
-[[Kategorii:Raudtestancijad Italii]]
+[[Kategorii:Raudtestancijad Italijas]]
 [[Kategorii:Raudtestancijad kirjamišton mödhe]]
