--- a/Kapitolovo_(stancii).mw
+++ b/Kapitolovo_(stancii).mw
@@ -7,3 +7,4 @@ Sijadase [[Leningradan agj]]an [[Vsevoložskan rajon]]as. 1 km päivlaskmahapäi
 
 [[Kategorii:Raudtestancijad kirjamišton mödhe]]
 [[Kategorii:Leningradan agjan raudtestancijad]]
+[[Kategorii:Raudtestancijad Venämas]]
