*Empty MediaWiki Message*

--- a/Murino_(Oktäbrin_raudten_platform).mw
+++ b/Murino_(Oktäbrin_raudten_platform).mw
@@ -7,3 +7,4 @@
 [[Kategorii:Piterin raudtestancijad]]
 
 [[ru:Мурино (платформа Октябрьской железной дороги)]]
+[[Kategorii:Raudtestancijad Venämas]]
