*Empty MediaWiki Message*

--- a/Petäjärvi_(stancii).mw
+++ b/Petäjärvi_(stancii).mw
@@ -7,3 +7,4 @@ Sijadase [[Leningradan agj]]an [[Priozerskan rajon]]as läz [[Petrovskoje]]-žil
 
 [[Kategorii:Raudtestancijad kirjamišton mödhe]]
 [[Kategorii:Leningradan agjan raudtestancijad]]
+[[Kategorii:Raudtestancijad Venämas]]
