*Empty MediaWiki Message*

--- a/Toksovo_(stancii).mw
+++ b/Toksovo_(stancii).mw
@@ -7,3 +7,4 @@ Sijadase [[Leningradan agj]]an [[Vsevoložskan rajon]]as [[Toksovo]]-lidnanvuič
 
 [[Kategorii:Raudtestancijad kirjamišton mödhe]]
 [[Kategorii:Leningradan agjan raudtestancijad]]
+[[Kategorii:Raudtestancijad Venämas]]
