--- a/Muil.mw
+++ b/Muil.mw
@@ -11,5 +11,5 @@ Om olmas m. k. «avtormuil» (käziradon muil), kudambad kaikutte voib tehta ič
 Mel'hetartten: ümbrimärarine kovan muilan formul — C<sub>17</sub>H<sub>35</sub>COONa, a nozolan muilan — C<sub>17</sub>H<sub>35</sub>COOK.
 {{stub}}
 
-[[Kategorii:Muil]]
+[[Kategorii:Muil| ]]
 [[Kategorii:Kodihimii]]
