--- a/Queen.mw
+++ b/Queen.mw
@@ -21,7 +21,7 @@ Gruppan aluz om pandud vl 1970.
 Nügüdläine mülükund:
 * [[Mei Brajan|Brajan Mei]] (1970—)
 * [[Teilor Rodžer|Rodžer Teilor]] (1970—)
-Klassižes mülükundas oliba [[Freddi Merkjuri]] da [[Dikon Džon|Džon Dikon]] mugažo; Merkjuri oli kaikiš tetabamb heišpäi. Hän ezini vlpäi 1970 vhesai 1991 (hänen surman voz' [[SIDS]]:aspäi); tähäsai-ki hän om üks' kaikiš znamasižišpäi muzikantoišpäi mail'mas.
+Klassižes mülükundas oliba [[Freddi Merkjuri]] da [[Dikon Džon|Džon Dikon]] mugažo; Merkjuri oli kaikiš tetabamb heišpäi. Hän ezini vlpäi 1970 vhesai 1991 (hänen surman voz' [[SIDS]]:aspäi); tähäsai-ki hän om üks' kaikiš znamasižembišpäi muzikantoišpäi mail'mas.
 
 Aigaližes gruppmülükundas eziniba (jonon mödhe) Maik Grouz, Barri Mitčel, Dag Ivud Bogi (kaik — [[basgitar]]istad), no hö oliba lühüdašti Queen:as.
 
