--- a/Muil.mw
+++ b/Muil.mw
@@ -1,6 +1,6 @@
 [[Fail:Bar of Irish Spring deodorant soap.JPG|thumbnail|right|250px|Muil]]
 [[Fail:Kolorowe mydelka.JPG|thumbnail|right|250px|Avtormuilad [[Pol'šanma]]späi]]
-'''Muil''' om kova vai [[nozoluz|nozol]] produkt, kudamb kävutab kut kosmetine abutuz ([[tualetmuil]]) vai kut [[kodihimii|kodihimijan]] abutuz ([[ižanduzmuil]]). Voib mäneb sättutoitandal vaiše jäl'ges kontaktad [[vezi|vedenke]].
+'''Muil''' om kova vai [[nozoluz|nozol]] produkt, kudamb kävutase kut kosmetine abutuz ([[tualetmuil]]) vai kut [[kodihimii|kodihimijan]] abutuz ([[ižanduzmuil]]). Voib sättutoittas vaiše jäl'ges kontaktad [[vezi|vedenke]].
 
 Istorižiden andmusiden mödhe, muil oli tetab [[Vavilon]]an da [[Amuižegipt]]an aigan völ.
 
