--- a/Muil.mw
+++ b/Muil.mw
@@ -6,7 +6,7 @@ Istorižiden andmusiden mödhe, muil oli tetab [[Vavilon]]an da [[Amuižegipt]]a
 
 Tualet- da ižanduzmuilad oma kaikiš levitadud toižendad ižanduses; om-ki eriline [[muil rostkekahatomaspäi teraraudaspäi]]. Nozol muil tegese enamba popul'arižeks mail'mas kovan kohtha, eriližišti Päivlaskman valdkundoiš.
 
-Om olmas m. k. «avtormuil» (käziradon muil), kudambad kaikutte voib tehta ičeksaz, specialižita tehnologijoita.
+Om olmas m. k. «avtormuil» (käziden tehtud), kudambad kaikutte voib tehta ičeksaz, specialižita tehnologijoita.
 
 Mel'hetartten: ümbrimärarine kovan muilan formul — C<sub>17</sub>H<sub>35</sub>COONa, a nozolan muilan — C<sub>17</sub>H<sub>35</sub>COOK.
 {{stub}}
