--- a/Tualetmuil.mw
+++ b/Tualetmuil.mw
@@ -1,3 +1,4 @@
+[[Fail:Savonette 2008.jpg|thumbnail|right|250px|Erazvuiččiden firmoiden tualetmuilad]]
 '''Tualetmuil''' om [[muil]]an toižend, kudamb kävutase personaližen [[gigijen]]an metoiden täht.
 
 Kogoneb [[živatrazv]]aspäi, erazvuiččišpäi [[voi]]špäi (oma [[pal'msüdäinvoi|pal'msüdäin-]] da/vai [[kokosvoi]] tobjimalaz), [[razvasižed muiktused|razvasižišpäi muiktusišpäi]] da m. e.; otdušk da mujutimed paksus mülütadas mülükundha mugažo.
