*Empty MediaWiki Message*

--- a/Muil.mw
+++ b/Muil.mw
@@ -9,6 +9,9 @@ Tualet- da ižanduzmuilad oma kaikiš levitadud toižendad ižanduses; om-ki eri
 Om olmas m. k. «avtormuil» (käziden tehtud), kudambad kaikutte voib tehta ičeksaz, specialižita tehnologijoita.
 
 Mel'hetartten: ümbrimärarine kovan muilan formul — C<sub>17</sub>H<sub>35</sub>COONa, a nozolan muilan — C<sub>17</sub>H<sub>35</sub>COOK.
+
+== Kacu mugažo ==
+* [[Muilnik]]
 {{stub}}
 
 [[Kategorii:Muil| ]]
