*Empty MediaWiki Message*

--- a/Azerbaidžanan_kel'.mw
+++ b/Azerbaidžanan_kel'.mw
@@ -1,3 +1,4 @@
+[[Fail:Idioma azerí.png|pisi]]
 '''Azerbaidžanan kel'''' (''Azərbaycan dili'') om om üks' türkižiš kelišpäi.
 
 Se om [[Azerbaidžan]]an valdkundkel'. Pagižijoiden lugu om läz 20 millionad rist.
