*Empty MediaWiki Message*

--- a/Azerbaidžanan_kel'.mw
+++ b/Azerbaidžanan_kel'.mw
@@ -1,4 +1,4 @@
-[[Fail:Idioma azerí.png|pisi]]
+[[Fail:Idioma azerí.png|pisi|Azerbaidžanan kelen leviganduz]]
 '''Azerbaidžanan kel'''' (''Azərbaycan dili'') om om üks' türkižiš kelišpäi.
 
 Se om [[Azerbaidžan]]an valdkundkel'. Pagižijoiden lugu om läz 20 millionad rist.
