--- a/Ununennii.mw
+++ b/Ununennii.mw
@@ -2,7 +2,7 @@
 
 Jäl'ges ičeze avaidust se linneb ezmäižeks elementaks [[himižiden elementoiden periodižen tabluden 8. period]]as. Elementan sinteziruindan naprind oli vl [[1985]] [[Berkli]]-lidnas ([[AÜV]]), no eksperiment oli satusekahatoi.
 
-Prognoziruidud atommass — 315 (erasiš purtkiš — 316) [[massan atomühtnik|m. AÜ]]. [[Elektronine konfiguracii]] — ''8s<sup>1</sup>''. Ezimeletaden, se linneb [[muglmetall]]aks vagevan muigotajan ičendanke.
+Prognoziruidud atommass — 315 (316 erasiš purtkiš) [[massan atomühtnik|m. AÜ]]. [[Elektronine konfiguracii]] — ''8s<sup>1</sup>''. Ezimeletaden, se linneb [[muglmetall]]aks vagevan muigotajan ičendanke.
 {{stub}}
 
 [[Kategorii:Himižed elementad]]
