*Empty MediaWiki Message*

--- a/Slovenijan_kel'.mw
+++ b/Slovenijan_kel'.mw
@@ -1,4 +1,4 @@
-[[Fail:Slovenian language map.png|240px|right|Slovenijan kelen kart]]
+[[Fail:Idioma esloveno.png|240px|right|Slovenijan kelen kart]]
 '''Slovenijan kel'''' (sloven.: ''slovenski jezik'' / ''slovenščina'') om üks' indoevropalaižiš, slavižiš kelišpäi.
 
 Om [[Slovenii|Slovenijan]] valdkundkel'.
