--- a/Unbiunii.mw
+++ b/Unbiunii.mw
@@ -2,9 +2,7 @@
 
 Jal'ges ičeze avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Ei ole elementan sinteziruindan naprindad tähäsai.
 
-Prognoziruidud atommass — 320 [[massan atomühtnik|m. AÜ]] läz. [[Elektronine konfiguracii]] — ''5g<sup>1</sup> 8s<sup>2</sup>''. Se linneb metallaks ([[superaktinoidad|superaktinoidaks]]), no nügüd' om jüged sanuda sen ičendoiden polhe.
+Prognoziruidud atommass — 320 [[massan atomühtnik|m. AÜ]] läz. [[Elektronine konfiguracii]] — ''5g<sup>1</sup> 8s<sup>2</sup>''. Se linneb metallaks (''[[superaktinoidad|superaktinoidaks]]''), no nügüd' om jüged sanuda sen ičendoiden polhe.
 {{stub}}
 
 [[Kategorii:Himižed elementad]]
-
-[[ru:Унбиуний]]
