--- a/Unbinilii.mw
+++ b/Unbinilii.mw
@@ -2,7 +2,7 @@
 
 Jäl'ges ičeze avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Kaik oli koume elementan sinteziruindan naprindad (kaks' vl 2007 da üks' vl 2011), no kaikuine niišpäi oli satusekahatoi.
 
-Prognoziruidud atommass — läz 320 [[massan atomühtnik|m. AÜ]]. [[Elektronine konfiguracii]] — ''8s<sup>2</sup>''. Ezimeletaden, se linneb mujutomaks [[muglmametall]]aks korktanke reakciženke muhtusenke.
+Prognoziruidud atommass — 320 [[massan atomühtnik|m. AÜ]] läz. [[Elektronine konfiguracii]] — ''8s<sup>2</sup>''. Ezimeletaden, se linneb mujutomaks [[muglmametall]]aks korktanke reakciženke muhtusenke.
 {{stub}}
 
 [[Kategorii:Himižed elementad]]
