--- a/Ununennii.mw
+++ b/Ununennii.mw
@@ -1,4 +1,4 @@
-'''Ununennii''' (vai '''eka-francii'''; [[latinan kel'|lat.]]: ''Ununnenium''), znamoitud aigaks kut '''Uue''', linneb 119. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
+'''Ununennii''' (vai '''eka-[[francii]]'''; [[latinan kel'|lat.]]: ''Ununnenium''), znamoitud aigaks kut '''Uue''', linneb 119. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
 
 Jäl'ges ičeze avaidust se linneb ezmäižeks elementaks [[himižiden elementoiden periodižen tabluden 8. period]]as. Elementan sinteziruindan naprind oli vl [[1985]] [[Berkli]]-lidnas ([[AÜV]]), no eksperiment oli satusekahatoi.
 
