*Empty MediaWiki Message*

--- a/Unbinilii.mw
+++ b/Unbinilii.mw
@@ -1,4 +1,4 @@
-'''Unbinilii''' (vai '''eka-radii'''; [[latinan kel'|lat.]]: ''Unbinilium''), znamoitud aigaks kut '''Ubn''', linneb 120. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
+'''Unbinilii''' (vai '''eka-[[radii]]'''; [[latinan kel'|lat.]]: ''Unbinilium''), znamoitud aigaks kut '''Ubn''', linneb 120. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
 
 Jäl'ges ičeze avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Kaik oli koume elementan sinteziruindan naprindad (kaks' vl 2007 da üks' vl 2011), no kaikuine niišpäi oli satusekahatoi.
 
