--- a/Unbiunii.mw
+++ b/Unbiunii.mw
@@ -1,8 +1,8 @@
-'''Unbiunii''' (vai '''eka-aktinii'''; [[latinan kel'|lat.]]: ''Unbiunium''), znamoitud aigaks kut '''Ubu''', linneb 121. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
+'''Unbiunii''' (vai '''eka-[[aktinii]]'''; [[latinan kel'|lat.]]: ''Unbiunium''), znamoitud aigaks kut '''Ubu''', linneb 121. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
 
 Jal'ges ičeze avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Ei ole elementan sinteziruindan naprindad tähäsai.
 
-Prognoziruidud atommass — 320—330 [[massan atomühtnik|m. AÜ]] läz. [[Elektronine konfiguracii]] — ''5g<sup>1</sup> 8s<sup>2</sup>''. Se linneb metallaks (''[[superaktinoidad|superaktinoidaks]]''), no nügüd' om jüged sanuda sen ičendoiden polhe.
+Prognoziruidud atommass — 320—330 [[massan atomühtnik|m. AÜ]] läz. [[Elektronine konfiguracii]] — ''5g<sup>1</sup> 8s<sup>2</sup>''. Se linneb ezmäižeks metallaks [[g-blok]]as (''[[superaktinoidad|superaktinoidaks]]''), no nügüd' om jüged sanuda sen ičendoiden polhe.
 {{stub}}
 
 [[Kategorii:Himižed elementad]]
