*Empty MediaWiki Message*

--- a/Unbiunii.mw
+++ b/Unbiunii.mw
@@ -1,4 +1,4 @@
-'''Unbiunii''' (vai '''eka-[[aktinii]]'''; [[latinan kel'|lat.]]: ''Unbiunium''), znamoitud aigaks kut '''Ubu''', linneb 121. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
+'''Unbiunii''' (vai '''eka-[[aktinii (himine element)|aktinii]]'''; [[latinan kel'|lat.]]: ''Unbiunium''), znamoitud aigaks kut '''Ubu''', linneb 121. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
 
 Jal'ges ičeze avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Ei ole elementan sinteziruindan naprindad tähäsai.
 
