--- a/Tualetmuil.mw
+++ b/Tualetmuil.mw
@@ -1,7 +1,7 @@
 [[Fail:Savonette 2008.jpg|thumbnail|right|250px|Erazvuiččiden firmoiden tualetmuilad]]
 '''Tualetmuil''' om [[muil]]an toižend, kudamb kävutase personaližen [[gigijen]]an metoiden täht.
 
-Kogoneb [[živatrazv]]aspäi, erazvuiččišpäi [[voi]]špäi (oma [[pal'msüdäinvoi|pal'msüdäin-]] da/vai [[kokosvoi]] tobjimalaz), [[razvasižed muiktused|razvasižišpäi muiktusišpäi]] da m. e.; otdušk da mujutimed paksus mülütadas mülükundha mugažo.
+Kogoneb [[živatrazv]]aspäi, erazvuiččišpäi [[voi]]špäi (oma [[pal'msüdäinvoi|pal'msüdäin-]] da/vai [[kokosvoi]] tobjimalaz), [[razvasižed muiktused|razvasižišpäi muiktusišpäi]] da m. e.; aromatizatorad da mujutimed paksus mülütadas mülükundha mugažo.
 
 [[GOST]]:an mödhe, om nell' tualetmuilan markad: „Neitraline“, „Ekstra“, „Lapseline“ da „Ordinarine“ (jogahine niišpäi erineb jalos mülükundan mödhe).
 
