мы ведь решили писать Kosov_

--- a/Prištin.mw
+++ b/Prištin.mw
@@ -8,7 +8,7 @@
 |-
 |Pind|| 857 km²
 |}
-'''Prištin''' ([[Serbijan kel'|serb.]] ''Приштина / Priština'', [[Albanijan kel'|alb.]] ''Prishtinë'') om lidn [[Serbii|Serbijas]], [[Kosovo i Metohii]]- avtonomižes randas.
+'''Prištin''' ([[Serbijan kel'|serb.]] ''Приштина / Priština'', [[Albanijan kel'|alb.]] ''Prishtinë'') om lidn [[Serbii|Serbijas]], [[Kosov i Metohii]]- avtonomižes randas.
 
 [[Fail:Prishtina perspektivë nga Radio Kosova 5.jpg||thumb|left|350px|Prištin]]
 
