*Empty MediaWiki Message*

--- a/Miraž_(grupp).mw
+++ b/Miraž_(grupp).mw
@@ -15,7 +15,7 @@
 }}
 {{tärtused|Miraž}}
 '''«Miraž»''' ('''«Мираж»''') om tetab [[NSTÜ|nevondkundaline]] i [[Venäma|venälaine]] [[disko]]-/popgrupp [[Moskv]]aspäi, vlspäi [[1986]].
-
+[[File:Mirazh gruppa 1.jpg|200 px|left|thumb|Miraž, 2009]]
 == Al'bomad ==
 * ''[[Zvözdi nas ždut|Звёзды нас ждут]]'' (1987)
 * ''[[Snova vmeste|Снова вместе]]'' (1988)
