--- a/Vintaž_(popgrupp).mw
+++ b/Vintaž_(popgrupp).mw
@@ -1,3 +1,4 @@
+[[File:Плетнёва Романов концерт в Крокусе.jpg|200 px|right|thumb|Vintaž. 2011]]
 '''«Vintaž»''' ([[venäkel'|venäkelel]]: ''Винтаж'') om populärine [[Venäma|venälaine]] muzikaline popgrupp.
 
 Mülükund:
