*Empty MediaWiki Message*

--- a/Vintaž_(popgrupp).mw
+++ b/Vintaž_(popgrupp).mw
@@ -1,4 +1,4 @@
-[[File:Плетнёва Романов концерт в Крокусе.jpg|200 px|right|thumb|Vintaž. 2011]]
+[[File:Плетнёва Романов концерт в Крокусе.jpg|thumbnail|right|250px|Vintaž, 2011]]
 '''«Vintaž»''' ([[venäkel'|venäkelel]]: ''Винтаж'') om populärine [[Venäma|venälaine]] muzikaline popgrupp.
 
 Mülükund:
