--- a/Tok-pisin.mw
+++ b/Tok-pisin.mw
@@ -1,6 +1,6 @@
 '''Tok-pisin''' (''Tok pisin'') om [[kreoline kel']], kudambal pagištas [[Papua—Uz' Gvinei|Papuas—Udes Gvinejas]]. 
 
-Pagižijoiden lugu om 3—4 millionad ristutud ([[2001]]), heišpäi 120 tuhad kuti mamankelel ([[2004]]). Kirjkel' om [[latinan kirjamišt]]on pohjal.
+Pagižijoiden lugu om 3—4 millionad ristutud ([[2001]]), heišpäi 120 tuhad kut mamankelel ([[2004]]). Kirjkel' om [[latinan kirjamišt]]on pohjal.
 {{stub}}
 
 [[Kategorii:Keled i dialektad kirjamišton mödhe]]
