--- a/Sesoto.mw
+++ b/Sesoto.mw
@@ -1,4 +1,4 @@
-[[Fail:South Africa 2011 Sotho speakers proportion map.svg|thumb|right|235px|Sesoto-kelen leviganduz vl [[2011]]]]
+<!--[[Fail:South Africa 2011 Sotho speakers proportion map.svg|thumb|right|235px|Sesoto-kelen leviganduz vl [[2011]]]]-->
 '''Sesoto''' vai '''suvisoto''' (''seSotho'') om [[bantu]]-gruppan kel', [[Lesoto]]n da [[Suviafrik]]an valdkundkel'. 
 
 Pagižijoiden lugu om läz 5 millionad ristitud. Sesoton kirjkel' om [[latinan kirjamišt]]on pohjal.
