*Empty MediaWiki Message*

--- a/Kuznecova_Agnija.mw
+++ b/Kuznecova_Agnija.mw
@@ -1,3 +1,4 @@
+[[File:Кузнецова Агния.jpg|200 px|right|thumb|Agnija Kuznecova]]
 '''Agnija Jevgen'jevna Kuznecova''' ([[Venäkel'|ven.]] ''Агния Евгеньевна Кузнецова'', sünd. [[15. heinku]] [[1985]], [[Novosibirsk]]) om [[Venäma|venälaine]] kinon da teatran aktör.
 
 == Tetabad rolid ==
