*Empty MediaWiki Message*

--- a/Kuznecova_Agnija.mw
+++ b/Kuznecova_Agnija.mw
@@ -1,5 +1,9 @@
-[[File:Кузнецова Агния.jpg|200 px|right|thumb|Agnija Kuznecova]]
+[[File:Кузнецова Агния.jpg|225px|right|thumb|Agnija Kuznecova vl [[2010]]]]
 '''Agnija Jevgen'jevna Kuznecova''' ([[Venäkel'|ven.]] ''Агния Евгеньевна Кузнецова'', sünd. [[15. heinku]] [[1985]], [[Novosibirsk]]) om [[Venäma|venälaine]] kinon da teatran aktör.
+
+== Biografii ==
+
+Agnija om sündnu [[Novosibirsk]]ha vl [[1985]]. Hänen tat om pirdai, a mam — opendai dekorativiž-sättutoitud čomamahtoiden institutas. Hän lopi školan Novosibirskas i mäni teatraližhe studijaha. Vl [[2006]] hän lopi [[Borisan Ščukinan nimen teatraline institut|V.V. Ščukinan nimen teatraližen üläškol]]an ([[Šlikov Jurii|J. Šlikovan]] kurs).
 
 == Tetabad rolid ==
 
