www.e-krakow.pl

--- a/Krakov.mw
+++ b/Krakov.mw
@@ -1,4 +1,8 @@
 '''Krakov''' ([[Pol'šan kel'|pol'š]].: ''Kraków'') om lidn [[Pol'šanma]]s. Se om [[Penen Pol'šanman saodaveikundan]] pälidn.
+
+== Irdkosketused ==
+* [http://www.e-krakow.pl www.e-krakow.pl]
+
 {{stub}}
 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
