*Empty MediaWiki Message*

--- a/Krakov.mw
+++ b/Krakov.mw
@@ -1,4 +1,4 @@
-'''Krakov''' ([[Pol'šan kel'|pol'š]].: ''Kraków'') om lidn [[Pol'šanma]]s. Se om [[Penen Pol'šanman saodaveikundan]] pälidn.
+'''Krakov''' ([[Pol'šan kel'|pol'š]].: ''Kraków'') om lidn [[Pol'šanma]]s. Se om [[Penen Pol'šanman sodaveikund]]an pälidn.
 {{stub}}
 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
