/* Mecoiden tipiden vepsän nimed */

--- a/Mec.mw
+++ b/Mec.mw
@@ -8,11 +8,14 @@
 * ''Kor'b, šohro, mecakišt, org'' — paks da amuine da edahaine mec.
 * ''Lomžom'' — mec äiluguižiden lohkaidud puidenke.
 * ''Madališt, barbikoikaz mec'' — madal ladvoil mec.
+* ''Palatez, palatiž'' — palanu mec.
 * ''Pihk'' — paks kavag'mec.
 * ''Puregišt'' — paks nor' mec.
-* ''Rädeg'' — paks da amuine kuz'ne mec.
 * ''Reskač, norišt'' — nor' mec.
 * ''Rozjam'' — kuivanu jurele mec.
+* ''Rouhišt'' — vanh mec, vanhoiš puišpäi.
+* ''Rädeg'' — paks da amuine kuz'ne mec.
+* ''Sar', sarik, sarjak'' — kazvai eriži mec.
 * ''Šaim'' — mectunu henošti [[so]].
 * ''Vičikišt'' — nor' paks mec; paks penzhišt.
 * ''Vidä'' — nor’ kuz’ne mec, mž. paks.
