--- a/Japonii.mw
+++ b/Japonii.mw
@@ -1,5 +1,5 @@
 {{Valdkund
-| Nimi = Japonii<br />日本国<br />Nippon-koku<br />Nihon-koku
+| Nimi = Japonii<br />日本国 <small>(Nippon-koku / Nihon-koku)</small>
 | Valdkundznam = Imperial Seal of Japan.svg
 | Flag = Flag of Japan.svg{{!}}border
 | Valdkundznam text = Imperatoran štamp
@@ -9,34 +9,32 @@
 | Voz' = 2012
 | Pind = 377,944
 | Kart = Japan (orthographic projection).svg
-| Kel' = [[japonan kel'|japonan]]
+| Kel' = [[japonijan kel'|japonijan]]
 | Valdkundan pämez' = [[Akihito]]-imperator
 | Päministr = [[Abe Sindzo]]
-| Religii = [[sintoizm]], [[buddizm]]
-| Valüt = [[jen|japonan jen]](¥)\(円)
+| Religii = [[sintoizm]], [[ateizm]], [[buddizm]], [[hristanuskond]]
+| Valüt = [[japonijan jen]] (¥)\(円)
 | Internet-domen = [[.jp]]
 | Telefonkod = +81
 | Aigvö = [[UTC]]+9
 }}
+'''Japonii''' ([[japonijan kel'|jap.]]: ''日本国'') om sar'hine valdkund Päivnouzmaižes [[Azii|Azijas]].
 
-'''Japonii''' om sar'hine valdkund Päivnouzmaižes [[Azii|Azijas]].
-
-Japonijan sarištos om 6,852 sared. Kaikiš surembad niišpäi oma Honsü, Hokkaido, Küsü da Sikoku.
+Japonijan sarištos om 6,852 sared. Kaikiš surembad niišpäi oma [[Honsü]], [[Hokkaido]], [[Küsü]] da [[Sikoku]].
 
 Mail'man kaikiš suremb lidnaglomeracii sijadase Japonijas — [[Tokio]]s da läz sidä eläb enamba 30 mln mest.
 
 Paolitine kul'tur läz 30 tuhad vot edel meiden erad paneb Japonan sarišton elänzoitmižen ezmäižen datan.
 
-Vozil 1904 — 1905 oli Venä-Japonine soda.
+Vozil 1904 — 1905 oli [[Venä-Japonijan soda]].
 
-[[Fail:Skyscrapers of Shinjuku 2009 January.jpg|thumb|left|350px|Üläkorktad sauvused Tokion Sindzüku-rajonas]]
+[[Fail:Skyscrapers of Shinjuku 2009 January.jpg|thumb|left|350px|Üläkorktad sauvused Tokion [[Sindzüku]]-rajonas]]
 
-== Administrativine jagand ==
+== [[Pol'šanman administrativiž-territorialine jagand|Administrativine jagand]] ==
 Japonijas om 47 prefekturad, kaikuččes om ičeze vald: gubernator, käskusenandai suim da administrativine bürokratii.
 
 == Homaičendad ==
 {{Reflist}}
-
 {{stub}}
 
 [[Kategorii:Japonii| ]]
