*Empty MediaWiki Message*

--- a/Japonii.mw
+++ b/Japonii.mw
@@ -1,4 +1,3 @@
-{{1000}}
 {{Valdkund
 | Nimi = Japonii<br />日本国 <small>(Nippon-koku / Nihon-koku)</small>
 | Valdkundznam = Imperial Seal of Japan.svg
@@ -9,7 +8,7 @@
 | Eläjiden lugu = 126,659,683<ref>[http://japandailypress.com/japanese-population-decreases-for-third-year-in-a-row-098767 Japanese population decreases for third year in a row.]</ref>
 | Voz' = 2012
 | Pind = 377,944
-| Kart = LocationJapan.png
+| Kart = Japan (orthographic projection).svg
 | Kel' = [[japonijan kel'|japonijan]]
 | Valdkundan pämez' = [[Akihito]]-imperator
 | Päministr = [[Abe Sindzo]]
@@ -31,7 +30,7 @@ Vozil 1904 — 1905 oli [[Venä-Japonijan soda]].
 
 [[Fail:Skyscrapers of Shinjuku 2009 January.jpg|thumb|left|350px|Üläkorktad sauvused Tokion [[Sindzüku]]-rajonas]]
 
-== [[Pol'šanman administrativiž-territorialine jagand|Administrativine jagand]] ==
+== [[Japonijan administrativiž-territorialine jagand|Administrativine jagand]] ==
 Japonijas om 47 prefekturad, kaikuččes om ičeze vald: gubernator, käskusenandai suim da administrativine bürokratii.
 
 == Homaičendad ==
