/* Vepsän tärtused mecanke sidotud */

--- a/Mec.mw
+++ b/Mec.mw
@@ -21,7 +21,12 @@
 * ''Vidä'' — nor’ kuz’ne mec, mž. paks.
 
 == Vepsän tärtused mecanke sidotud ==
+* ''Lamad'' — mecan tarh meckävutamižen täht.
+* ''Mechine, mechaine, mecauk, mecamez''' — mifine mecan ižand.
+* ''Parččom'' — mecan varhapanend.
+* ''Tösk'' — mecan tarh vai čapmaha.
 * ''Uhring'' — notked taho mecas.
+* ''Vugonk'' — mecan ajand jogedme.
 
 == Vepsän muštatišed da ozoitesed mecanke sidotud ==
 === Muštatišed ===
