Статья о Японии входит в топ1000 обязательных статей + предыдущая карта просто некорректна.

--- a/Japonii.mw
+++ b/Japonii.mw
@@ -1,3 +1,4 @@
+{{1000}}
 {{Valdkund
 | Nimi = Japonii<br />日本国 <small>(Nippon-koku / Nihon-koku)</small>
 | Valdkundznam = Imperial Seal of Japan.svg
@@ -8,7 +9,7 @@
 | Eläjiden lugu = 126,659,683<ref>[http://japandailypress.com/japanese-population-decreases-for-third-year-in-a-row-098767 Japanese population decreases for third year in a row.]</ref>
 | Voz' = 2012
 | Pind = 377,944
-| Kart = Japan (orthographic projection).svg
+| Kart = LocationJapan.png
 | Kel' = [[japonijan kel'|japonijan]]
 | Valdkundan pämez' = [[Akihito]]-imperator
 | Päministr = [[Abe Sindzo]]
