*Empty MediaWiki Message*

--- a/Stounhendž.mw
+++ b/Stounhendž.mw
@@ -1,7 +1,9 @@
+{{1000}}
 [[Fail:Stonehenge under dark clouds.jpg|thumb|right|300px|Stounhendž]]
 '''Stounhendž''' ([[Anglijan kel'|angl.]] ''Stonehenge'') om eziistorine kivine sauvuz.
 
 Stounhendžan znamoičend om tundmatoi. Se voi olda [[observatorii|observatorijan]] vai kaumoiden tahon.
+{{stub}}
 
 [[Kategorii:Istorii]]
 [[Kategorii:Arheologižed objektad kirjamišton mödhe]]
