ku logikan mödhe

--- a/Unbitrii.mw
+++ b/Unbitrii.mw
@@ -1,4 +1,4 @@
-'''Unbitrii''' ([[latinan kel'|lat.]]: ''Unbitrium''), znamoitud aigaks kut '''Ubt''', linneb 123. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
+'''Unbitrii''' (vai '''eka-[[protaktinii]]'''; [[latinan kel'|lat.]]: ''Unbitrium''), znamoitud aigaks kut '''Ubt''', linneb 123. himižeks elementaks [[himižiden elementoiden periodine tablut|Mendelejevan periodižes tabludes]].
 
 Jal'ges ičeze avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Ei ole elementan sinteziruindan naprindad tähäsai.
 
