--- a/Unbibii.mw
+++ b/Unbibii.mw
@@ -2,7 +2,7 @@
 
 Erasiden andmuseden mödhe, unbibijan [[izotop]]ad oma olmas longuses arni ([[torii|torijan]] kezandmaiš, dai sen südäiolend niiš om ničtožnoi), no himijanmehiden enambusel om heilündad neciš. Jal'ges ičeze enamb konkretišt avaidust se mülüb udhe, [[himižiden elementoiden periodižen tabluden 8. period]]ha. Oli elementan sinteziruindan naprindoiden rivi, no kaikuine niišpäi oli satusekahatoi.
 
-Atommass om tundmatoi. [[Elektronine konfiguracii]] — ''5g<sup>2</sup>8s<sup>2</sup>''. Se linneb metallaks (''[[superaktinoidad|superaktinoidaks]]''), no nügüd' om jüged sanuda sen ičendoiden polhe.
+Prognoziruidud atommass — 324 [[massan atomühtnik|m. AÜ]] läz. [[Elektronine konfiguracii]] — ''5g<sup>2</sup>8s<sup>2</sup>''. Se linneb metallaks (''[[superaktinoidad|superaktinoidaks]]''), no nügüd' om jüged sanuda sen ičendoiden polhe.
 {{stub}}
 
 [[Kategorii:Himižed elementad]]
